2002-01-08  olicha  <olivier.chapuis@free.fr>

	* FvwmDragWell/fvwmDragWell.c (veryLongLoop):
	* FvwmDragWell/fvwmDragWell.h:
	Fixed transparent redraw

	* FvwmIconBox/FvwmIconBox.c (Loop):
	(CreateWindow):
	(change_colorset):
	Implemented transparency

	* FvwmForm/FvwmForm.h:
	* FvwmForm/FvwmForm.c:
	* FvwmForm/ReadXServer.c (ReadXServer):
	* FvwmScript/FvwmScript.c (OpenWindow):
	(ReadXServer):
	Fixed redraw of transparent scripts and forms

	* FvwmIconMan/x.c (xevent_loop):
	Fixed redraw of a transparent swallowed IconMan

	* FvwmButtons/FvwmButtons.c (Loop):
	Fixed redraw of a transparent FvwmButtons. Take in acount swallowed
	window and try to distinguish fvwm module and x applications

2002-01-08  Dominik Vogt  <dominik.vogt@gmx.de>

	* FvwmWharf/FvwmWharf.c (ParseOptions):
	* FvwmIconBox/FvwmIconBox.c (ParseOptions):
	* FvwmForm/FvwmForm.c (ct_Fore):
	* FvwmDragWell/fvwmDragWell.c (parseOptions):
	* FvwmButtons/parse.c (parse_window_geometry):
	applied patch by Andrew Pimlott to fix some problems when a geometry
	was specified multiple times in some of the modules

2002-01-07  Dominik Vogt  <dominik.vogt@gmx.de>

	* FvwmIconMan/x.c (xevent_loop):
	(handle_buttonevent):
	* FvwmIconMan/fvwm.c (handle_config_info):
	* FvwmIconMan/readconfig.c (GetConfigLineWrapper):
	handle IgnoreModifiers command

2002-01-05  olicha  <olivier.chapuis@free.fr>

	* FvwmPager/x_pager.c (MovePage):
	Fixed the active page colorset updating after a page change if the
	colorset is transparent

2002-01-04  olicha  <olivier.chapuis@free.fr>

	* FvwmIconMan/xmanager.c (draw_manager):
	Fixed Transparency by reducing the number of full redraw.
	A Transprent FvwmIconMan was almost always empty

2002-01-04  olicha  <olivier.chapuis@free.fr>

	* FvwmTaskBar/FvwmTaskBar.c (LoopOnEvents):
	Fixed moving a Transparent TaskBar. Eat up excess Expose events.
	Fixed resizing an AutoHide TaskBar

2002-01-04  Mikhael Goikhman  <migo@homemail.com>
